# qingque-api

./: .gitignore  .gitmodules  README.md  dev.py  pyproject.toml  settings.toml.example
app/: docs.py  errors.py  main.py  patcher.py  requests.py  responses.py  services.py  settings.py
app/controllers/: hoyolab.py  mihomo.py  transactions.py
domain/: i18n.py  redisdb.py  transcations.py
domain/hylab/: client.py  constants.py  ds.py  interceptor.py
domain/hylab/models/: base.py  overview.py  simuniverse.py
domain/mihomo/: client.py
domain/mihomo/models/: characters.py  combats.py  player.py  relics.py  stats.py  weapons.py
domain/starrail/: caching.py  imaging.py  loader.py  scoring.py
domain/starrail/generator/: base.py  characters.py  chronicles.py  mihomo.py  mixins.py  moc.py  player.py  simuniverse.py
domain/starrail/models/: characters.py  rogues.py  stats.py  weapons.py
qutils/: tooling.py
